--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "autoprefixer": "^10.4.15",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
+    "i18next": "^23.4.4",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.1",
     "postcss": "^8.4.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.1.2",
     "react-redux": "^8.1.2",
     "tailwindcss": "^3.3.3"
   },
