--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.1.2",
     "react-redux": "^8.1.2",
+    "suncalc": "^1.9.0",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/suncalc": "^1.9.0",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "@vitejs/plugin-react": "^4.0.3",
